added virtual keyboard project

--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>Here's a list of my JS Projects</h1>
+
+    <ul>
+      <li>Virtual Keyboard</li>
+    </ul>
+
   </body>
 </html>
