--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -8,7 +8,7 @@
     <h1>Here's a list of my JS Projects</h1>
 
     <ul>
-      <li>Virtual Keyboard</li>
+      <li><a href="vkey">Virtual Keyboard</a></li>
     </ul>
 
   </body>
