--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Virtual Keyboard | JS Projects</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-min.css">
   </head>
   <body>
-    <h1>Virtual Keyboard</h1>
+
+
+    <script src="scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
+    <script src="scripts/popper.min.js" charset="utf-8"></script>
+    <script src="bootstrap/js/bootstrap-min.js" charset="utf-8"></script>
+    
   </body>
 </html>
