added primary structure of the keyboard and the webpage

--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -9,10 +9,113 @@
   </head>
   <body>
 
+    <section class="mainContainer container-fluid">
+
+      <div class="container-xl">
+
+        <div class="mainHeading row">
+          <div class="col-12 text-center">
+            <h1>Virtual Keyboard</h1>
+          </div>
+        </div>
+
+        <div class="mainContent row">
+
+          <div class="col-12">
+
+            <div class="textField row">
+              <div class="col-12">
+                <form class="textField" action="index.html" method="post">
+                  <input type="text" name="textField" placeholder="Type here...">
+                </form>
+              </div>
+            </div>
+
+            <div class="buttons row">
+              <div class="col-12">
+
+                <div class="row firstRow">
+
+                  <span id="one" class="key col-1">1</span>
+                  <span id="two" class="key col-1">2</span>
+                  <span id="three" class="key col-1">3</span>
+                  <span id="four" class="key col-1">4</span>
+                  <span id="five" class="key col-1">5</span>
+                  <span id="six" class="key col-1">6</span>
+                  <span id="seven" class="key col-1">7</span>
+                  <span id="eight" class="key col-1">8</span>
+                  <span id="nine" class="key col-1">9</span>
+                  <span id="zero" class="key col-1">0</span>
+
+                </div>
+
+                <div class="row secondRow">
+
+                  <span id="q" class="key col-1">q</span>
+                  <span id="w" class="key col-1">w</span>
+                  <span id="e" class="key col-1">e</span>
+                  <span id="r" class="key col-1">r</span>
+                  <span id="t" class="key col-1">t</span>
+                  <span id="y" class="key col-1">y</span>
+                  <span id="u" class="key col-1">u</span>
+                  <span id="i" class="key col-1">i</span>
+                  <span id="o" class="key col-1">o</span>
+                  <span id="p" class="key col-1">p</span>
+                  <span id="cross" class="key col-1">X</span>
+
+                </div>
+
+                <div class="row thirdRow">
+
+                  <span id="a" class="key col-1">q</span>
+                  <span id="s" class="key col-1">w</span>
+                  <span id="d" class="key col-1">e</span>
+                  <span id="f" class="key col-1">r</span>
+                  <span id="g" class="key col-1">t</span>
+                  <span id="h" class="key col-1">y</span>
+                  <span id="j" class="key col-1">u</span>
+                  <span id="k" class="key col-1">i</span>
+                  <span id="l" class="key col-1">o</span>
+                  <span id="enter" class="key col-1">Enter</span>
+
+                </div>
+
+                <div class="row fourthRow">
+
+                  <span id="shift" class="key col-1">Shift</span>
+                  <span id="z" class="key col-1">w</span>
+                  <span id="x" class="key col-1">e</span>
+                  <span id="c" class="key col-1">r</span>
+                  <span id="v" class="key col-1">t</span>
+                  <span id="b" class="key col-1">y</span>
+                  <span id="n" class="key col-1">u</span>
+                  <span id="m" class="key col-1">i</span>
+                  <span id="," class="key col-1">o</span>
+                  <span id="." class="key col-1">p</span>
+                  <span id="shift" class="key col-1">Shift</span>
+
+                </div>
+
+                <div class="row fifthRow align-items-center">
+
+                  <span id="space" class="key col-4">Space</span>
+
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
 
     <script src="scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
     <script src="scripts/popper.min.js" charset="utf-8"></script>
     <script src="bootstrap/js/bootstrap-min.js" charset="utf-8"></script>
-    
+
   </body>
 </html>
