added margins and fixed prebiously mistaken keys

--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -13,7 +13,7 @@
 
       <div class="container-xl">
 
-        <div class="mainHeading row">
+        <div class="mainHeading row m-5">
           <div class="col-12 text-center">
             <h1>Virtual Keyboard</h1>
           </div>
@@ -23,10 +23,10 @@
 
           <div class="col-12">
 
-            <div class="textField row">
+            <div class="textField row justify-content-center my-5">
               <div class="col-12">
                 <form class="textField" action="index.html" method="post">
-                  <input type="text" name="textField" placeholder="Type here...">
+                  <input class="form-control form-control-lg" type="text" placeholder="Type here...">
                 </form>
               </div>
             </div>
@@ -34,7 +34,7 @@
             <div class="buttons row">
               <div class="col-12">
 
-                <div class="row firstRow">
+                <div class="row firstRow justify-content-center my-3">
 
                   <span id="one" class="key col-1">1</span>
                   <span id="two" class="key col-1">2</span>
@@ -49,7 +49,7 @@
 
                 </div>
 
-                <div class="row secondRow">
+                <div class="row secondRow justify-content-center my-3">
 
                   <span id="q" class="key col-1">q</span>
                   <span id="w" class="key col-1">w</span>
@@ -65,40 +65,40 @@
 
                 </div>
 
-                <div class="row thirdRow">
+                <div class="row thirdRow justify-content-center my-3">
 
-                  <span id="a" class="key col-1">q</span>
-                  <span id="s" class="key col-1">w</span>
-                  <span id="d" class="key col-1">e</span>
-                  <span id="f" class="key col-1">r</span>
-                  <span id="g" class="key col-1">t</span>
-                  <span id="h" class="key col-1">y</span>
-                  <span id="j" class="key col-1">u</span>
-                  <span id="k" class="key col-1">i</span>
-                  <span id="l" class="key col-1">o</span>
+                  <span id="a" class="key col-1">a</span>
+                  <span id="s" class="key col-1">s</span>
+                  <span id="d" class="key col-1">d</span>
+                  <span id="f" class="key col-1">f</span>
+                  <span id="g" class="key col-1">g</span>
+                  <span id="h" class="key col-1">h</span>
+                  <span id="j" class="key col-1">j</span>
+                  <span id="k" class="key col-1">k</span>
+                  <span id="l" class="key col-1">l</span>
                   <span id="enter" class="key col-1">Enter</span>
 
                 </div>
 
-                <div class="row fourthRow">
+                <div class="row fourthRow justify-content-center my-3">
 
                   <span id="shift" class="key col-1">Shift</span>
-                  <span id="z" class="key col-1">w</span>
-                  <span id="x" class="key col-1">e</span>
-                  <span id="c" class="key col-1">r</span>
-                  <span id="v" class="key col-1">t</span>
-                  <span id="b" class="key col-1">y</span>
-                  <span id="n" class="key col-1">u</span>
-                  <span id="m" class="key col-1">i</span>
-                  <span id="," class="key col-1">o</span>
-                  <span id="." class="key col-1">p</span>
+                  <span id="z" class="key col-1">z</span>
+                  <span id="x" class="key col-1">x</span>
+                  <span id="c" class="key col-1">c</span>
+                  <span id="v" class="key col-1">v</span>
+                  <span id="b" class="key col-1">b</span>
+                  <span id="n" class="key col-1">n</span>
+                  <span id="m" class="key col-1">m</span>
+                  <span id="," class="key col-1">,</span>
+                  <span id="." class="key col-1">.</span>
                   <span id="shift" class="key col-1">Shift</span>
 
                 </div>
 
-                <div class="row fifthRow align-items-center">
+                <div class="row fifthRow justify-content-center my-3">
 
-                  <span id="space" class="key col-4">Space</span>
+                  <span id="space" class="key col-4 text-center">Space</span>
 
                 </div>
 
