--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Virtual Keyboard | JS Projects</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
 
-    <section class="mainContainer container-fluid">
+    <section class="mainContainer container-fluid vh-100">
 
       <div class="container-xl">
 
-        <div class="mainHeading row m-5">
-          <div class="col-12 text-center">
+        <div class="mainHeading row">
+          <div class="col-12 text-center my-5">
             <h1>Virtual Keyboard</h1>
           </div>
         </div>
@@ -26,7 +27,7 @@
             <div class="textField row justify-content-center my-5">
               <div class="col-12">
                 <form class="textField" action="index.html" method="post">
-                  <input class="form-control form-control-lg" type="text" placeholder="Type here...">
+                  <input class="form-control form-control-lg" type="text" placeholder="Type here..." autofocus>
                 </form>
               </div>
             </div>
@@ -36,69 +37,68 @@
 
                 <div class="row firstRow justify-content-center my-3">
 
-                  <span id="one" class="key col-1">1</span>
-                  <span id="two" class="key col-1">2</span>
-                  <span id="three" class="key col-1">3</span>
-                  <span id="four" class="key col-1">4</span>
-                  <span id="five" class="key col-1">5</span>
-                  <span id="six" class="key col-1">6</span>
-                  <span id="seven" class="key col-1">7</span>
-                  <span id="eight" class="key col-1">8</span>
-                  <span id="nine" class="key col-1">9</span>
-                  <span id="zero" class="key col-1">0</span>
+                  <span id="one" class="key col-1 text-center p-0 m-0">1</span>
+                  <span id="two" class="key col-1 text-center p-0 m-0">2</span>
+                  <span id="three" class="key col-1 text-center p-0 m-0">3</span>
+                  <span id="four" class="key col-1 text-center p-0 m-0">4</span>
+                  <span id="five" class="key col-1 text-center p-0 m-0">5</span>
+                  <span id="six" class="key col-1 text-center p-0 m-0">6</span>
+                  <span id="seven" class="key col-1 text-center p-0 m-0">7</span>
+                  <span id="eight" class="key col-1 text-center p-0 m-0">8</span>
+                  <span id="nine" class="key col-1 text-center p-0 m-0">9</span>
+                  <span id="zero" class="key col-1 text-center p-0 m-0">0</span>
 
                 </div>
 
                 <div class="row secondRow justify-content-center my-3">
 
-                  <span id="q" class="key col-1">q</span>
-                  <span id="w" class="key col-1">w</span>
-                  <span id="e" class="key col-1">e</span>
-                  <span id="r" class="key col-1">r</span>
-                  <span id="t" class="key col-1">t</span>
-                  <span id="y" class="key col-1">y</span>
-                  <span id="u" class="key col-1">u</span>
-                  <span id="i" class="key col-1">i</span>
-                  <span id="o" class="key col-1">o</span>
-                  <span id="p" class="key col-1">p</span>
-                  <span id="cross" class="key col-1">X</span>
+                  <span id="q" class="key col-1 text-center p-0 m-0">q</span>
+                  <span id="w" class="key col-1 text-center p-0 m-0">w</span>
+                  <span id="e" class="key col-1 text-center p-0 m-0">e</span>
+                  <span id="r" class="key col-1 text-center p-0 m-0">r</span>
+                  <span id="t" class="key col-1 text-center p-0 m-0">t</span>
+                  <span id="y" class="key col-1 text-center p-0 m-0">y</span>
+                  <span id="u" class="key col-1 text-center p-0 m-0">u</span>
+                  <span id="i" class="key col-1 text-center p-0 m-0">i</span>
+                  <span id="o" class="key col-1 text-center p-0 m-0">o</span>
+                  <span id="p" class="key col-1 text-center p-0 m-0">p</span>
+                  <span id="cross" class="key col-1 text-center p-0 m-0">&#8592;</span>
 
                 </div>
 
                 <div class="row thirdRow justify-content-center my-3">
 
-                  <span id="a" class="key col-1">a</span>
-                  <span id="s" class="key col-1">s</span>
-                  <span id="d" class="key col-1">d</span>
-                  <span id="f" class="key col-1">f</span>
-                  <span id="g" class="key col-1">g</span>
-                  <span id="h" class="key col-1">h</span>
-                  <span id="j" class="key col-1">j</span>
-                  <span id="k" class="key col-1">k</span>
-                  <span id="l" class="key col-1">l</span>
-                  <span id="enter" class="key col-1">Enter</span>
+                  <span id="a" class="key col-1 text-center p-0 m-0">a</span>
+                  <span id="s" class="key col-1 text-center p-0 m-0">s</span>
+                  <span id="d" class="key col-1 text-center p-0 m-0">d</span>
+                  <span id="f" class="key col-1 text-center p-0 m-0">f</span>
+                  <span id="g" class="key col-1 text-center p-0 m-0">g</span>
+                  <span id="h" class="key col-1 text-center p-0 m-0">h</span>
+                  <span id="j" class="key col-1 text-center p-0 m-0">j</span>
+                  <span id="k" class="key col-1 text-center p-0 m-0">k</span>
+                  <span id="l" class="key col-1 text-center p-0 m-0">l</span>
+                  <span id="enter" class="key col-1 text-center p-0 m-0">&#8626;</span>
 
                 </div>
 
                 <div class="row fourthRow justify-content-center my-3">
 
-                  <span id="shift" class="key col-1">Shift</span>
-                  <span id="z" class="key col-1">z</span>
-                  <span id="x" class="key col-1">x</span>
-                  <span id="c" class="key col-1">c</span>
-                  <span id="v" class="key col-1">v</span>
-                  <span id="b" class="key col-1">b</span>
-                  <span id="n" class="key col-1">n</span>
-                  <span id="m" class="key col-1">m</span>
-                  <span id="," class="key col-1">,</span>
-                  <span id="." class="key col-1">.</span>
-                  <span id="shift" class="key col-1">Shift</span>
+                  <span id="z" class="key col-1 text-center p-0 m-0">z</span>
+                  <span id="x" class="key col-1 text-center p-0 m-0">x</span>
+                  <span id="c" class="key col-1 text-center p-0 m-0">c</span>
+                  <span id="v" class="key col-1 text-center p-0 m-0">v</span>
+                  <span id="b" class="key col-1 text-center p-0 m-0">b</span>
+                  <span id="n" class="key col-1 text-center p-0 m-0">n</span>
+                  <span id="m" class="key col-1 text-center p-0 m-0">m</span>
+                  <span id="," class="key col-1 text-center p-0 m-0">,</span>
+                  <span id="." class="key col-1 text-center p-0 m-0">.</span>
+                  <span id="shift" class="key col-1 text-center p-0 m-0">&#8679;</span>
 
                 </div>
 
                 <div class="row fifthRow justify-content-center my-3">
 
-                  <span id="space" class="key col-4 text-center">Space</span>
+                  <span id="space" class="key col-4 text-center p-0 m-0">Space</span>
 
                 </div>
 
