--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -27,7 +27,7 @@
             <div class="textField row justify-content-center my-5">
               <div class="col-12">
                 <form class="textField" action="index.html" method="post">
-                  <input class="form-control form-control-lg" type="text" placeholder="Type here..." autofocus>
+                  <input class="form-control form-control-lg" id="textField" type="text" placeholder="Type here..." autofocus>
                 </form>
               </div>
             </div>
@@ -37,16 +37,16 @@
 
                 <div class="row firstRow justify-content-center my-3">
 
-                  <span id="one" class="key col-1 text-center p-0 m-0">1</span>
-                  <span id="two" class="key col-1 text-center p-0 m-0">2</span>
-                  <span id="three" class="key col-1 text-center p-0 m-0">3</span>
-                  <span id="four" class="key col-1 text-center p-0 m-0">4</span>
-                  <span id="five" class="key col-1 text-center p-0 m-0">5</span>
-                  <span id="six" class="key col-1 text-center p-0 m-0">6</span>
-                  <span id="seven" class="key col-1 text-center p-0 m-0">7</span>
-                  <span id="eight" class="key col-1 text-center p-0 m-0">8</span>
-                  <span id="nine" class="key col-1 text-center p-0 m-0">9</span>
-                  <span id="zero" class="key col-1 text-center p-0 m-0">0</span>
+                  <span id="1" class="key col-1 text-center p-0 m-0">1</span>
+                  <span id="2" class="key col-1 text-center p-0 m-0">2</span>
+                  <span id="3" class="key col-1 text-center p-0 m-0">3</span>
+                  <span id="4" class="key col-1 text-center p-0 m-0">4</span>
+                  <span id="5" class="key col-1 text-center p-0 m-0">5</span>
+                  <span id="6" class="key col-1 text-center p-0 m-0">6</span>
+                  <span id="7" class="key col-1 text-center p-0 m-0">7</span>
+                  <span id="8" class="key col-1 text-center p-0 m-0">8</span>
+                  <span id="9" class="key col-1 text-center p-0 m-0">9</span>
+                  <span id="0" class="key col-1 text-center p-0 m-0">0</span>
 
                 </div>
 
@@ -116,6 +116,7 @@
     <script src="scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
     <script src="scripts/popper.min.js" charset="utf-8"></script>
     <script src="bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="scripts/script.js" charset="utf-8"></script>
 
   </body>
 </html>
