backspace button now works as intended

--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -62,7 +62,7 @@
                   <span id="i" class="key col-1 text-center p-0 m-0">i</span>
                   <span id="o" class="key col-1 text-center p-0 m-0">o</span>
                   <span id="p" class="key col-1 text-center p-0 m-0">p</span>
-                  <span id="cross" class="key col-1 text-center p-0 m-0">&#8592;</span>
+                  <span id="backpsace" class="key col-1 text-center p-0 m-0">&#8592;</span>
 
                 </div>
 
