space button now works well, changed the way I was making backspace work because it was causing some problem idk why, fixed id of '0' on main document, fixed the id of 'backspace' on css

--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -46,7 +46,7 @@
                   <span id="seven" class="key col-1 text-center p-0 m-0">7</span>
                   <span id="eight" class="key col-1 text-center p-0 m-0">8</span>
                   <span id="nine" class="key col-1 text-center p-0 m-0">9</span>
-                  <span id="ten" class="key col-1 text-center p-0 m-0">0</span>
+                  <span id="zero" class="key col-1 text-center p-0 m-0">0</span>
 
                 </div>
 
