added enter button functionality, changed textField input to textarea

--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -26,8 +26,10 @@
 
             <div class="textField row justify-content-center my-5">
               <div class="col-12">
-                <form class="textField" action="index.html" method="post">
-                  <input class="form-control form-control-lg" id="textField" type="text" placeholder="Type here..." autofocus>
+                <form>
+                  <div class="form-group">
+                    <textarea class="form-control form-control-lg" id="textField" rows="3" placeholder="Type here..."></textarea>
+                  </div>
                 </form>
               </div>
             </div>
