--- a/JSPros/vkey/index.html
+++ b/JSPros/vkey/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Virtual Keyboard | JS Projects</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
@@ -115,9 +115,9 @@
 
     </section>
 
-    <script src="scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
-    <script src="scripts/popper.min.js" charset="utf-8"></script>
-    <script src="bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="../../scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
+    <script src="../../scripts/popper.min.js" charset="utf-8"></script>
+    <script src="../../bootstrap/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="scripts/script.js" charset="utf-8"></script>
 
   </body>
