forgot to change the title, changed it

--- a/JSPros/jkey/index.html
+++ b/JSPros/jkey/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Virtual Keyboard | JS Projects</title>
+    <title>Javascript Keyboard | JS Projects</title>
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/master.css">
   </head>
