added autofocus attribute and function to keep textfield always focused

--- a/JSPros/jkey/index.html
+++ b/JSPros/jkey/index.html
@@ -29,7 +29,7 @@
               <div class="col-12">
                 <form>
                   <div class="form-group">
-                    <textarea class="form-control form-control-lg" id="textField" rows="3" placeholder="Type here..."></textarea>
+                    <textarea class="form-control form-control-lg" id="textField" rows="3" placeholder="Type here..." autofocus></textarea>
                   </div>
                 </form>
               </div>
