added a new layout with special characters.

--- a/JSPros/jkey/index.html
+++ b/JSPros/jkey/index.html
@@ -35,7 +35,71 @@
               </div>
             </div>
 
-            <div class="buttons row">
+            <div class="hideLayout row" id="secondLayout">
+              <div class="col-12">
+
+                <div class="row firstRow justify-content-center my-3">
+
+                  <span id="hash" class="key col-1 text-center p-0 m-0">#</span>
+                  <span id="one" class="key col-1 text-center p-0 m-0">1</span>
+                  <span id="two" class="key col-1 text-center p-0 m-0">2</span>
+                  <span id="three" class="key col-1 text-center p-0 m-0">3</span>
+                  <span id="dollar" class="key col-1 text-center p-0 m-0">$</span>
+                  <span id="ampersand" class="key col-1 text-center p-0 m-0">&</span>
+                  <span id="underscore" class="key col-1 text-center p-0 m-0">_</span>
+                  <span id="hyphen" class="key col-1 text-center p-0 m-0">-</span>
+                  <span id="question" class="key col-1 text-center p-0 m-0">?</span>
+
+                </div>
+
+                <div class="row secondRow justify-content-center my-3">
+
+                  <span id="at" class="key col-1 text-center p-0 m-0">@</span>
+                  <span id="four" class="key col-1 text-center p-0 m-0">4</span>
+                  <span id="five" class="key col-1 text-center p-0 m-0">5</span>
+                  <span id="six" class="key col-1 text-center p-0 m-0">6</span>
+                  <span id="leftFirstBracket" class="key col-1 text-center p-0 m-0">(</span>
+                  <span id="rightFirstBracket" class="key col-1 text-center p-0 m-0">)</span>
+                  <span id="equal" class="key col-1 text-center p-0 m-0">=</span>
+                  <span id="plus" class="key col-1 text-center p-0 m-0">+</span>
+                  <span id="exclaimation" class="key col-1 text-center p-0 m-0">!</span>
+
+                </div>
+
+                <div class="row thirdRow justify-content-center my-3">
+
+                  <span id="singleQuote" class="key col-1 text-center p-0 m-0">'</span>
+                  <span id="seven" class="key col-1 text-center p-0 m-0">7</span>
+                  <span id="eight" class="key col-1 text-center p-0 m-0">8</span>
+                  <span id="nine" class="key col-1 text-center p-0 m-0">9</span>
+                  <span id="leftSecondBracket" class="key col-1 text-center p-0 m-0">{</span>
+                  <span id="rightSecondBracket" class="key col-1 text-center p-0 m-0">}</span>
+                  <span id="colon" class="key col-1 text-center p-0 m-0">:</span>
+                  <span id="reminder" class="key col-1 text-center p-0 m-0">%</span>
+                  <span id="backpsace" class="key col-1 text-center p-0 m-0">&#8592;</span>
+
+                </div>
+
+                <div class="row fourthRow justify-content-center my-3">
+
+                  <span id="getRegulars" class="key col-1 text-center p-0 m-0">abc</span>
+                  <span id="slash" class="key col-1 text-center p-0 m-0">/</span>
+                  <span id="anotherZero" class="key col-1 text-center p-0 m-0">0</span>
+                  <span id="backslash" class="key col-1 text-center p-0 m-0">\</span>
+                  <span id="leftThirdBracket" class="key col-1 text-center p-0 m-0">[</span>
+                  <span id="rightThirdBracket" class="key col-1 text-center p-0 m-0">]</span>
+                  <span id="doubleQuote" class="key col-1 text-center p-0 m-0">"</span>
+                  <span id="semiColon" class="key col-1 text-center p-0 m-0">;</span>
+                  <span id="enter" class="key col-1 text-center p-0 m-0">&#8626;</span>
+
+                </div>
+
+              </div>
+            </div>
+
+
+
+            <div class="row" id="firstLayout">
               <div class="col-12">
 
                 <div class="row firstRow justify-content-center my-3">
@@ -65,7 +129,6 @@
                   <span id="i" class="key col-1 text-center p-0 m-0">i</span>
                   <span id="o" class="key col-1 text-center p-0 m-0">o</span>
                   <span id="p" class="key col-1 text-center p-0 m-0">p</span>
-                  <span id="backpsace" class="key col-1 text-center p-0 m-0">&#8592;</span>
 
                 </div>
 
@@ -80,12 +143,12 @@
                   <span id="j" class="key col-1 text-center p-0 m-0">j</span>
                   <span id="k" class="key col-1 text-center p-0 m-0">k</span>
                   <span id="l" class="key col-1 text-center p-0 m-0">l</span>
-                  <span id="enter" class="key col-1 text-center p-0 m-0">&#8626;</span>
 
                 </div>
 
                 <div class="row fourthRow justify-content-center my-3">
 
+                  <span id="shift" class="key col-1 text-center p-0 m-0">&#8679;</span>
                   <span id="z" class="key col-1 text-center p-0 m-0">z</span>
                   <span id="x" class="key col-1 text-center p-0 m-0">x</span>
                   <span id="c" class="key col-1 text-center p-0 m-0">c</span>
@@ -93,15 +156,17 @@
                   <span id="b" class="key col-1 text-center p-0 m-0">b</span>
                   <span id="n" class="key col-1 text-center p-0 m-0">n</span>
                   <span id="m" class="key col-1 text-center p-0 m-0">m</span>
-                  <span id="," class="key col-1 text-center p-0 m-0">,</span>
-                  <span id="." class="key col-1 text-center p-0 m-0">.</span>
-                  <span id="shift" class="key col-1 text-center p-0 m-0">&#8679;</span>
+                  <span id="backpsace" class="key col-1 text-center p-0 m-0">&#8592;</span>
 
                 </div>
 
                 <div class="row fifthRow justify-content-center my-3">
 
+                  <span id="getSpecials" class="key col-1 text-center p-0 m-0">123</span>
+                  <span id="," class="key col-1 text-center p-0 m-0">,</span>
                   <span id="space" class="key col-4 text-center p-0 m-0">Space</span>
+                  <span id="." class="key col-1 text-center p-0 m-0">.</span>
+                  <span id="enter" class="key col-1 text-center p-0 m-0">&#8626;</span>
 
                 </div>
 
