--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -25,13 +25,24 @@
 
           <div class="listOfProjects col-12">
 
-            <div class="list-group">
+            <div class="list-group my-3">
               <a href="jkey" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h3 class="mb-3">Javascript Keyboard</h3>
                   <small>8 June 2020</small>
                 </div>
                 <p class="mb-3">A fully functional English qwerty layout keyboard</p>
+                <small>HTML, CSS, Javascript, Bootstrap</small>
+              </a>
+            </div>
+
+            <div class="list-group my-3">
+              <a href="covid19" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h3 class="mb-3">Covid19 Information</h3>
+                  <small>18 June 2020</small>
+                </div>
+                <p class="mb-3">Covid19 information using Covid19 API </p>
                 <small>HTML, CSS, Javascript, Bootstrap</small>
               </a>
             </div>
