some minor changes

--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -17,7 +17,7 @@
         <div class="mainHeading row">
           <div class="col-12 text-center my-5">
             <h1 class="my-3">Javascript Projects</h1>
-            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io">Github</a></h4>
+            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io/tree/master/JSPros" target="_blank">Github</a></h4>
           </div>
         </div>
 
@@ -43,7 +43,7 @@
                   <small>18 June 2020</small>
                 </div>
                 <p class="mb-3">Covid19 information using Covid19 API </p>
-                <small>HTML, CSS, Javascript, Bootstrap</small>
+                <small>HTML, CSS, Javascript, Bootstrap, API</small>
               </a>
             </div>
 
