--- a/JSPros/jkey/index.html
+++ b/JSPros/jkey/index.html
@@ -17,7 +17,7 @@
         <div class="mainHeading row">
           <div class="col-12 text-center my-5">
             <h1 class="my-3">Javascript Keyboard</h1>
-            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io">Github</a></h4>
+            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io/tree/master/JSPros/jkey" target="_blank">Github</a></h4>
           </div>
         </div>
 
