--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="mainHeading row">
           <div class="col-12 text-center my-5">
             <h1 class="my-3">Mahdi's Projects</h1>
-            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io">Github</a></h4>
+            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io" target="_blank">Github</a></h4>
           </div>
         </div>
 
@@ -29,7 +29,7 @@
               <a href="JSPros">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                 Javascript
-                <span class="badge badge-primary badge-pill">1</span>
+                <span class="badge badge-primary badge-pill">2</span>
                 </li>
               </a>
             </ul>
