added newly initialized project in the directory

--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -26,6 +26,17 @@
           <div class="listOfProjects col-12">
 
             <div class="list-group my-3">
+              <a href="jkey" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                  <h3 class="mb-3">Text Editor</h3>
+                  <small>22 July 2020</small>
+                </div>
+                <p class="mb-3">A text editor built using Javascript</p>
+                <small>HTML, CSS, Javascript, Bootstrap</small>
+              </a>
+            </div>
+
+            <div class="list-group my-3">
               <a href="covid19" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h3 class="mb-3">Covid19 Information</h3>
@@ -35,7 +46,7 @@
                 <small>HTML, CSS, Javascript, Bootstrap, API</small>
               </a>
             </div>
-            
+
             <div class="list-group my-3">
               <a href="jkey" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
