fixed a little problem

--- a/JSPros/index.html
+++ b/JSPros/index.html
@@ -26,7 +26,7 @@
           <div class="listOfProjects col-12">
 
             <div class="list-group my-3">
-              <a href="jkey" class="list-group-item list-group-item-action">
+              <a href="textEditor" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h3 class="mb-3">Text Editor</h3>
                   <small>22 July 2020</small>
