added nodeJS to the directories, gonna start a nodeJS project

--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
 
             <ul class="list-group">
               <a href="JSPros">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center mt-3">
                 Javascript
                 <span class="badge badge-primary badge-pill">2</span>
+                </li>
+              </a>
+              <a href="nodeJS">
+                <li class="list-group-item d-flex justify-content-between align-items-center mt-3">
+                nodeJS
+                <span class="badge badge-primary badge-pill">1</span>
                 </li>
               </a>
             </ul>
