--- a/nodeJS/_lets-chat/public/index.html
+++ b/nodeJS/_lets-chat/public/index.html
@@ -5,31 +5,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let's Chat</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/master.css" type="text/css">
   </head>
 
   <body>
-    <div class="container">
-      <div class="inbox">
-        <div class="inbox__people">
-          <h4>Active users</h4>
+
+    <section class="mainContainer container-fluid vh-100">
+
+      <div class="row">
+
+        <div class="col-2 activeUsers py-4 px-5 vh-100">
+
+          <h2 class="py-5 mb-5">Active Users</h2>
+
+          <div class="onlineUsers">
+
+          </div>
+
         </div>
-        <div class="inbox__messages">
-          <div class="messages__history"></div>
-          <div class="fallback"></div>
+
+        <div class="col-1">
+
         </div>
+
+        <div class="col-8 messages vh-100">
+
+          <div class="inbox__messages clearfix">
+            <div class="messages__history my-5 clearfix"></div>
+            <div class="fallback"></div>
+          </div>
+
+          <div class="messageForm w-100">
+            <form class="message_form my-3">
+              <input type="text" class="message_form__input p-3" placeholder="Type a message" autofocus/>
+              <button class="message_form__button p-3" type="submit">
+                Enter
+              </button>
+            </form>
+          </div>
+
+        </div>
+
+        <div class="col-1">
+
+        </div>
+
       </div>
 
-      <form class="message_form">
-        <input type="text" class="message_form__input" placeholder="Type a message" />
-        <button class="message_form__button" type="submit">
-          Enter
-        </button>
-      </form>
-    </div>
+    </section>
 
+    <script src="scripts/jquery-3.4.1.min.js" charset="utf-8"></script>
+    <script src="scripts/popper.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     <script src="scripts/main.js"></script>
+
   </body>
 
 </html>
