stying changes and improvements, still need to work on mobile layout

--- a/nodeJS/_lets-chat/public/index.html
+++ b/nodeJS/_lets-chat/public/index.html
@@ -20,8 +20,8 @@
           <form class="unameForm" method="post">
             <input type="text" name="uName" placeholder="Enter a unique username" class="unameBox p-3" autofocus>
             <button type="submit" name="unameSubmit" class="unameSubmit p-3">Let's go</button>
+            <p style="display:none;color:#D04336;" class="warningMessage font-weight-bold mt-3 lead">Someone with this username is already online!</p>
           </form>
-          <p style="display:none;color:red;" class="warningMessage">username already in use</p>
 
         </div>
 
