changed the link of lets-chat, its pointed to where it is hosted

--- a/nodeJS/index.html
+++ b/nodeJS/index.html
@@ -26,7 +26,7 @@
           <div class="listOfProjects col-12">
 
             <div class="list-group my-3">
-              <a href="lets-chat" class="list-group-item list-group-item-action">
+              <a href="https://chitychaty.herokuapp.com/" class="list-group-item list-group-item-action">
                 <div class="d-flex w-100 justify-content-between">
                   <h3 class="mb-3">Let's Chat</h3>
                   <small>09 September 2020</small>
