finished styling top nav

--- a/JSPros/gitRepos/index.html
+++ b/JSPros/gitRepos/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Github Repositories Finder</title>
   </head>
   <body>
@@ -21,9 +22,15 @@
         <a href="./forbidden.html">Explore</a>
       </div>
       <div class="headerIcons">
-        <img src="./forbidden.html" alt="Notifications" />
-        <img src="./forbidden.html" alt="New Repository" />
-        <img src="./forbidden.html" alt="Profile Picture" />
+        <a href="./forbidden.html">
+          <img src="./images/notification.svg" alt="Notifications" />
+        </a>
+        <a href="./forbidden.html">
+          <img src="./images/plus.svg" alt="New Repository" />
+        </a>
+        <a href="./forbidden.html">
+          <img src="./images/user.svg" alt="Profile Picture" />
+        </a>
       </div>
     </header>
 
