added placeholder in the search bar and some small changes

--- a/JSPros/gitRepos/index.html
+++ b/JSPros/gitRepos/index.html
@@ -13,7 +13,12 @@
         </a>
       </div>
       <div class="searchBar">
-        <input type="text" name="Search" id="headerSearch" />
+        <input
+          type="text"
+          name="Search"
+          id="headerSearch"
+          placeholder="Search or jump to..."
+        />
       </div>
       <div class="links">
         <a href="./forbidden.html">Pull requests</a>
