optimized for mobile, not the best but it works

--- a/JSPros/gitRepos/index.html
+++ b/JSPros/gitRepos/index.html
@@ -40,6 +40,24 @@
       </div>
     </header>
 
+    <header class="mobileHeader">
+      <div class="menuButton">
+        <a href="./forbiddent.html">
+          <img src="./images/menu.svg" alt="Menu Button" />
+        </a>
+      </div>
+      <div class="mobileLogo">
+        <a href="./index.html">
+          <img src="./images/gitMark.png" alt="Github Logo" />
+        </a>
+      </div>
+      <div class="mobileHeaderIcons">
+        <a href="./forbidden.html">
+          <img src="./images/notification.svg" alt="Notifications" />
+        </a>
+      </div>
+    </header>
+
     <section class="mainSection">
       <div class="profileInfo">
         <div class="profilePicture">
